--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <title>Mes Cartes</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
+<h1>📇 Ma collection de cartes</h1>
+
+<div id="cartes-container"></div>
+
+<script src="script.js"></script>
+</body>
+</html>
