--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
         <label><input type="checkbox" value="rouge"> Rouge</label>
         <label><input type="checkbox" value="bleu"> Bleu</label>
         <label><input type="checkbox" value="vert"> Vert</label>
-        <label><input type="checkbox" value="blanc"> Blanc</label>
+        <label><input type="checkbox" value="violet"> Violet</label>
         <label><input type="checkbox" value="noir"> Noir</label>
+        <label><input type="checkbox" value="jaune"> Jaune</label>
     </div>
 </div>
 
