--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
     </div>
 </div>
 
+<div id="modal" class="modal hidden">
+  <div class="modal-content">
+    <span id="closeModal" class="close">&times;</span>
+    <h2 id="modalNom"></h2>
+    <div id="modalCouleurs"></div>
+    <img id="modalImage" src="" alt="">
+  </div>
+</div>
+
 <div id="cartes-container"></div>
 
 <script src="script.js"></script>
