--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <h1>🎴 Ma collection de cartes</h1>
 
+<a href="deck.html" class="deck-link">🧠 Créer un deck</a>
+
 <!-- BARRE DE RECHERCHE -->
 <div class="filtres">
     <input
